# skill-truth-check

./: .gitignore  CHANGELOG.md  LAUNCH-CHECKLIST.md  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/sample-skill/: SKILL.md
launch/: LAUNCH-INDEX.md  devto-article.md  hn-show.md  linkedin-en.md  linkedin-zh.md  reddit-claude.md  reddit-langchain.md  x-thread.md
skill_truth_check/: __init__.py  audit.py  brier.py  cli.py  digest.py  judge.py  parse.py  synthetic.py
tests/: test_brier.py  test_cli.py  test_parse_skill_md.py
